# mpc_cpp

./: .gitignore  CMakeLists.txt
config/: robot_params.yaml
docs/: README.md  deployment_guide.md
driver/include/: robstride.hpp
driver/src/: can_interface.cpp  observations.cpp  robstride.cpp
include/common/: math_utils.hpp  robot_config.hpp  robot_state.hpp
include/estimator/: state_estimator.hpp
include/gait/: gait_generator.hpp
include/kinematics/: quadruped_kin.hpp
include/mpc/: mpc_controller.hpp  nmpc_footstep.hpp
include/wbc/: wbc_controller.hpp
scripts/: install_deps.sh
src/: main.cpp  test_position_control.cpp
src/common/: robot_config.cpp
src/estimator/: state_estimator.cpp
src/gait/: gait_generator.cpp
src/kinematics/: quadruped_kin.cpp
src/mpc/: mpc_controller.cpp  nmpc_footstep.cpp
src/wbc/: wbc_controller.cpp
tests/: imu_viz_server.cpp  test_imu.cpp  test_joystick.cpp  test_mpc_solver.cpp  test_single_joint.cpp
